Top background, image added

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,3 +1,8 @@
 .navbar {
-  background-color: rgb(75, 75, 243);
+  background-color: rgb(6, 6, 136);
+}
+
+.navbar-brand {
+  font-weight: bold;
+  font-size: 8rem;
 }
