--- a/src/styles/Round.css
+++ b/src/styles/Round.css
@@ -1,7 +1,9 @@
-@media (prefers-reduced-motion: no-preference) {
-  .pic {
-    animation: moveRound infinite 10 s linear;
-  }
+.round-pic {
+  width: 200px;
+  animation: moveRound infinite 12s alternate;
+  background-color: blue;
+  border-radius: 30px;
+  opacity: 0.7;
 }
 
 @keyframes moveRound {
@@ -11,4 +13,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.round-pic-div {
+  height: 600px;
+}
+
+h5 {
+  color: whitesmoke;
+  margin-bottom: 100px;
+  font-size: 40px;
 }
