--- a/src/styles/Round.css
+++ b/src/styles/Round.css
@@ -1,9 +1,13 @@
 .round-pic {
-  width: 200px;
-  animation: moveRound infinite 12s alternate;
-  background-color: blue;
-  border-radius: 30px;
-  opacity: 0.7;
+  width: 118px;
+  padding: 10px;
+  float: left;
+  animation: moveRound infinite 10s alternate;
+  border-radius: 68px;
+}
+
+.round-pic-div {
+  height: 90px;
 }
 
 @keyframes moveRound {
@@ -15,12 +19,11 @@
   }
 }
 
-.round-pic-div {
-  height: 600px;
-}
-
 h5 {
   color: whitesmoke;
-  margin-bottom: 100px;
-  font-size: 40px;
+  font-size: 42px;
+}
+.top-heading {
+  font-size: 45px;
+  color: whitesmoke;
 }
