Navbar simplified, Gallery, Places components created, 4seasonpictures set for min width

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,9 +1,9 @@
-.navbar {
-  background-color: rgb(6, 6, 136);
-  opacity: 0.2;
-}
-
-.navbar-brand {
+/* .navbar-brand {
   font-weight: bold;
-  font-size: 8rem;
+  font-size: 2rem;
+} */
+
+.nav-link,
+.navbar-brand {
+  color: whitesmoke;
 }
