--- a/src/styles/Round.css
+++ b/src/styles/Round.css
@@ -1,13 +1,14 @@
 .round-pic {
   width: 118px;
   padding: 10px;
-  float: left;
   animation: moveRound infinite 10s alternate;
   border-radius: 68px;
 }
 
 .round-pic-div {
   height: 90px;
+  margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 @keyframes moveRound {
@@ -24,6 +25,6 @@ h5 {
   font-size: 42px;
 }
 .top-heading {
-  font-size: 45px;
+  font-size: 25px;
   color: whitesmoke;
 }
