--- a/src/styles/SeasonPics.css
+++ b/src/styles/SeasonPics.css
@@ -1,27 +1,32 @@
-.four-container {
-  display: grid;
-  grid-gap: 2px;
-  grid-template-columns: repeat(2, 1fr);
+.wrapper {
+  position: relative;
   width: fit-content;
-  max-width: 600px;
+  margin: 0 auto;
+  border: solid 2px white;
 }
 
- @media (min-width: 768px) {
-  .items {
-    width: 450px;
-  }
+.itemSp {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  width: 180px;
+  border-left: solid white 4px;
 }
-
-/* @media (min-width: 768px) {
-  .items {
-    width: 600px;
-  }
+.itemSu {
+  position: absolute;
+  top: 0px;
+  right: 15px;
+  width: 140px;
 }
-
-@media (min-width: 1020px) {
-  .items {
-    width: 850px;
-  }
-} */
-
-
+.itemAu {
+  position: absolute;
+  top: 130px;
+  left: 30px;
+  width: 125px;
+}
+.itemWi {
+  position: absolute;
+  top: 109px;
+  right: -10px;
+  width: 160px;
+}
