--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,9 +1,4 @@
-/* .navbar-brand {
-  font-weight: bold;
-  font-size: 2rem;
-} */
-
-.nav-link,
-.navbar-brand {
-  color: whitesmoke;
+.navbar {
+  position: sticky;
+  top: 0;
 }
