--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,7 +1,28 @@
-body {
+/* .gallery-wrapper {
   background-color: rgb(51, 73, 134);
-}
+} */
 
 .carousel {
-  width: 96%;
+  max-width: 68%;
+  padding: 50px;
+}
+.carousel-caption {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.carousel-caption > p {
+  color: white;
+}
+
+.carousel-item {
+  border: solid 1px white;
+}
+
+.top-heading {
+  padding: 15px;
+}
+.logo {
+  max-width: 70px;
+  float: left;
 }
